--- a/template.html
+++ b/template.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template - Utilizar como modelo</title>
-    <link rel="stylesheet" href="base.css">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Clínica Exemplo – Página Principal</title>
+  <link rel="stylesheet" href="base.css" />
 </head>
 <body>
-    <div class="wrapper">
-        <div class="menu">
-            <!-- Aqui vai o seu menu -->
-            <ul>
-                <li><a href="#">Link</a></li>
-            </ul>
-        </div>
-
-        <div class="main">
-            <div class="header">
-                Header
-                <!-- Aqui vai o seu header -->
-            </div>
-    
-            <div class="content">
-                Content
-                <!-- Aqui vai o seu conteúdo -->
-            </div>
-    
-            <div class="footer">
-                Footer
-                <!-- Aqui vai o seu rodapé -->
-            </div>
-        </div>
+  <div class="wrapper">
+    <div class="menu">
+      <ul>
+        <li><a href="index.html">Página Principal</a></li>
+        <li><a href="sobre.html">Sobre a clínica</a></li>
+        <li><a href="horario.html">Horário de Atendimento</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
     </div>
+
+    <div class="main">
+      <div class="header">
+        <img src="assets/header-home.jpg" alt="Fachada da clínica" />
+      </div>
+
+      <div class="content">
+        <h1>Bem-vindo à Clínica Exemplo</h1>
+        <p>
+          Cuidamos da sua saúde com equipe multidisciplinar, atendimento humanizado
+          e estrutura confortável. Aqui você encontra clínica geral, psicologia,
+          pediatria e oftalmologia em um só lugar.
+        </p>
+      </div>
+
+      <div class="footer">
+        <p><strong>Clínica Exemplo</strong> • CNPJ 00.000.000/0000-00</p>
+        <p>Telefone/WhatsApp: (11) 90000-0000 • E-mail: contato@clinicaexemplo.com.br</p>
+        <p>Endereço: Av. Paulista, 1000 – Bela Vista, São Paulo – SP</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
